--- a/src/Components/SearchJobs.module.css
+++ b/src/Components/SearchJobs.module.css
@@ -1,12 +1,9 @@
 .job-search-container {
   display: flex;
-  width: 100%;
   gap: 100px;
-  margin-top: 15px;
   padding: 10px;
-  box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.05);
-  -webkit-box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.05);
+  background-color: #c4dfdf;
+  margin: 20px;
 }
 
 .job-search-container h3 {
@@ -17,7 +14,7 @@
 }
 
 .span {
-  color: #dfd7bf;
+  color: rgb(123, 122, 122);
   padding-left: 10px;
   font-weight: 500;
 }
