--- a/src/UI/Card.module.css
+++ b/src/UI/Card.module.css
@@ -1,11 +1,12 @@
 .card {
-  border-radius: 5px;
+  background-color: white;
+  flex: 0 0 auto;
   width: 300px;
   height: 200px;
-  padding-bottom: 30px;
+  margin-right: 50px;
   margin-bottom: 50px;
-  margin-left: 30px;
-  box-shadow: 0px 0px 34px -8px rgba(0, 0, 0, 0.82);
-  -webkit-box-shadow: 0px 0px 34px -8px rgba(0, 0, 0, 0.82);
-  -moz-box-shadow: 0px 0px 34px -8px rgba(0, 0, 0, 0.82);
+  margin-top: 50px;
+  box-shadow: 15px 15px 18px -10px rgba(0, 0, 0, 0.36);
+  -webkit-box-shadow: 15px 15px 18px -10px rgba(0, 0, 0, 0.36);
+  -moz-box-shadow: 15px 15px 18px -10px rgba(0, 0, 0, 0.36);
 }
