--- a/src/Components/NavBar.module.css
+++ b/src/Components/NavBar.module.css
@@ -1,11 +1,22 @@
 .nav-container {
-  margin: 0;
   display: flex;
   justify-content: space-evenly;
-  box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.05);
-  -webkit-box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.05);
+  /* box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.2); */
+  /* background-color: var(--first); */
   background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 5px;
+  /* border-radius: 10px; */
+  border: 1px solid white;
+  border-bottom-color: rgb(216, 212, 212);
+  z-index: 1;
 }
 .logo {
   display: flex;
