--- a/src/Components/RecommendedJobs.module.css
+++ b/src/Components/RecommendedJobs.module.css
@@ -2,14 +2,21 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  background-color: #f6f1f1;
-  margin: 20px 15px;
-  border-radius: 10px;
+  /* background-color: var(--third); */
+  background-color: white;
+  margin: 0 15px;
+  border: 1px solid white;
+  border-bottom-color: rgb(216, 212, 212);
 
-  padding: 10px;
-  box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.5);
+  padding-left: 50px;
+  padding-top: 10px;
+  box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 11px 11px 27px -11px rgba(0, 0, 0, 0.2);
+}
+
+.upper h1 {
+  font-weight: 700;
 }
 
 .upper {
@@ -26,12 +33,12 @@ ul {
   margin-left: -30px;
 }
 .card-container {
+  margin-top: -40px;
   display: flex;
   overflow-x: auto;
   gap: 30px;
-  padding: 10px;
-  padding-left: 10;
-  background-color: #afd3e2;
+  /* background-color: var(--third); */
+  border-radius: 10px;
 }
 .card-container::-webkit-scrollbar {
   display: none;
@@ -73,13 +80,16 @@ ul {
 
 .button-container {
   display: flex;
-  justify-content: space-evenly;
-  gap: 10px;
+  justify-content: space-between;
+  padding: 0 10px;
 }
 
 .button-container button {
-  height: 30px;
-  width: 100px;
   border-radius: 5px;
+
+  width: 50px;
   cursor: pointer;
+  background-color: white;
+  color: blue;
+  font-weight: 700;
 }
