--- a/src/UI/Card.module.css
+++ b/src/UI/Card.module.css
@@ -1,12 +1,13 @@
 .card {
   background-color: white;
   flex: 0 0 auto;
-  width: 300px;
+  width: 420px;
   height: 200px;
   margin-right: 50px;
   margin-bottom: 50px;
   margin-top: 50px;
-  box-shadow: 15px 15px 18px -10px rgba(0, 0, 0, 0.36);
-  -webkit-box-shadow: 15px 15px 18px -10px rgba(0, 0, 0, 0.36);
-  -moz-box-shadow: 15px 15px 18px -10px rgba(0, 0, 0, 0.36);
+  border-radius: 10px;
+  box-shadow: 0px 0px 11px 2px rgba(0, 0, 0, 0.14);
+  -webkit-box-shadow: 0px 0px 11px 2px rgba(0, 0, 0, 0.14);
+  -moz-box-shadow: 0px 0px 11px 2px rgba(0, 0, 0, 0.14);
 }
