--- a/src/Components/JobDescription/JobDescTop.module.scss
+++ b/src/Components/JobDescription/JobDescTop.module.scss
@@ -1,67 +1,58 @@
-.main {
-  border: 1px solid white;
-  border-bottom-color: rgb(216, 212, 212);
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-.title-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  padding: 20px;
-  padding-bottom: 25px;
+.top {
+  background-color: #f2f5f9;
 }
 
 .jobs-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
   gap: 50px;
-  background-color: white;
-  padding: 30px;
+  padding: 50px 40px;
 }
 .jobs {
   display: flex;
-  padding: 5px 20px;
-  background-color: white;
   gap: 10px;
   align-items: center;
-  height: 150px;
-  width: 600px;
-  border: 1px solid rgb(174, 168, 168);
+  height: 200px;
+  width: 100%;
+  // border: 1px solid rgb(174, 168, 168);
   border-radius: 10px;
-}
-.jobs svg {
-  font-size: 25px;
-  font-weight: 100;
-  color: grey;
+
+  svg {
+    font-size: 25px;
+    font-weight: 100;
+    color: grey;
+  }
 }
 
 .icon {
-  padding-right: 15px;
-}
-
-.job-detail {
-  /* margin-top: -10px; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  padding-right: 35px;
 }
 
 .details {
   margin-top: -15px;
   display: flex;
   gap: 20px;
+
+  div {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+
+    p {
+      font-size: 10px;
+    }
+  }
 }
 
-.details div {
+.job-detail {
+  margin-top: -10px;
   display: flex;
-  align-items: center;
-  gap: 5px;
-  /* background-color: green; */
+  flex-direction: column;
+  justify-content: center;
+
+  h3 {
+    font-size: 20px;
+  }
 }
 
 .img {
@@ -103,6 +94,9 @@
 }
 
 button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgb(189, 189, 242);
   height: 50px;
   width: 200px;
